# fms-event-monitor

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: websocket_client.py
src/fmsmonitor/: __main__.py  cheesy_websocket.py  cli.py  event_publisher.py  field_monitor.py
tests/: test_cheesy_websocket.py  test_event_publisher.py  test_field_monitor.py  websocket_helpers.py
tests/static/: field_monitor_test.html
tools/: websocket_client.py
