[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fms-event-monitor"
version = "0.1.0"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ian Thompson", email = "ian@yann.io" }]

dependencies = ["playwright~=1.47", "websockets~=13.1"]

[project.urls]
Source = "https://github.com/ianthompson/fms-event-monitor"

[project.scripts]
fms-event-monitor = "fmsmonitor.cli:main"

[tool.hatch.build.targets.sdist]
exlcude = ["/.github", "/.vscode", "/tests", "/tools"]

[tool.hatch.build.targets.wheel]
packages = ["src/fmsmonitor"]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest-asyncio", "pytest-timeout", "pytest-mock"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
